stream_settings: Fix stream description overflow in stream settings.
With longer stream descriptions, the text overflows in stream settings.

Fix this with 'word-break: break-all;'.

--- a/web/styles/subscriptions.css
+++ b/web/styles/subscriptions.css
@@ -849,6 +849,7 @@ h4.user_group_setting_subsection_title {
 
     .group-description-wrapper,
     .stream-description {
+        word-break: break-all;
         margin-bottom: 5px;
 
         .no-description {
